--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -34,7 +34,8 @@ jobs:
 
     - name: 📦 Install Dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install --upgrade pip wheel
+        pip install setuptools==69.0.0
         pip install mlflow==${{ env.MLFLOW_VERSION }}
         pip install scikit-learn==1.4.0 pandas==2.2.0 numpy==1.26.3 scipy==1.12.0
         pip install matplotlib>=3.8.0 seaborn>=0.13.0 joblib>=1.3.0
