Fix: Improve run detection in Docker build script
- Use 'find' command instead of 'ls | grep' for robust detection
- Add comprehensive debugging output at each step
- Verify MLmodel file exists before Docker build
- List directory contents for troubleshooting
- Better error messages with context

This should fix 'No run found' error by properly detecting
run directories regardless of naming format.

--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -172,20 +172,30 @@ jobs:
           echo "❌ MLruns directory not found"
           exit 1
         fi
-
         echo "✓ MLruns directory found"
 
-        # Find experiment and run
-        EXPERIMENT_ID=$(ls -1 mlruns | grep '^[0-9]' | head -1)
+        # List mlruns structure for debugging
+        echo "MLruns structure:"
+        ls -la mlruns/
+
+        # Find experiment (directories with numeric names)
+        EXPERIMENT_ID=$(find mlruns -maxdepth 1 -type d -name "[0-9]*" | head -1 | xargs basename)
         if [ -z "$EXPERIMENT_ID" ]; then
           echo "❌ No experiment found"
           exit 1
         fi
         echo "✓ Experiment ID: $EXPERIMENT_ID"
 
-        RUN_ID=$(ls -1 mlruns/$EXPERIMENT_ID | grep '^[a-f0-9]' | head -1)
-        if [ -z "$RUN_ID" ]; then
-          echo "❌ No run found"
+        # List experiment contents
+        echo "Experiment contents:"
+        ls -la "mlruns/$EXPERIMENT_ID/"
+
+        # Find run ID (any directory that's not meta.yaml or .trash)
+        RUN_ID=$(find "mlruns/$EXPERIMENT_ID" -maxdepth 1 -type d ! -name "$EXPERIMENT_ID" ! -name ".*" | head -1 | xargs basename)
+        if [ -z "$RUN_ID" ] || [ "$RUN_ID" = "$EXPERIMENT_ID" ]; then
+          echo "❌ No run found in experiment $EXPERIMENT_ID"
+          echo "Available items:"
+          ls -la "mlruns/$EXPERIMENT_ID/"
           exit 1
         fi
         echo "✓ Run ID: $RUN_ID"
@@ -195,13 +205,22 @@ jobs:
         # Verify model directory exists
         if [ ! -d "$MODEL_PATH" ]; then
           echo "❌ Model not found at: $MODEL_PATH"
+          echo "Run artifacts contents:"
+          ls -la "mlruns/$EXPERIMENT_ID/$RUN_ID/artifacts/" || echo "Artifacts directory not found"
           exit 1
         fi
         echo "✓ Model found at: $MODEL_PATH"
 
         # List model contents
         echo "Model contents:"
-        ls -la "$MODEL_PATH"
+        ls -la "$MODEL_PATH/"
+
+        # Verify MLmodel file exists
+        if [ ! -f "$MODEL_PATH/MLmodel" ]; then
+          echo "❌ MLmodel file not found - required for Docker build"
+          exit 1
+        fi
+        echo "✓ MLmodel file found"
 
         # Build Docker image
         echo "🐳 Building Docker image..."
