--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -178,49 +178,44 @@ jobs:
         echo "MLruns structure:"
         ls -la mlruns/
 
-        # Find experiment (directories with numeric names)
-        EXPERIMENT_ID=$(find mlruns -maxdepth 1 -type d -name "[0-9]*" | head -1 | xargs basename)
-        if [ -z "$EXPERIMENT_ID" ]; then
-          echo "❌ No experiment found"
+        # Find run with model artifacts (search in mlruns root)
+        # MLflow can store runs at root level or inside experiment folders
+        echo "Searching for model artifacts..."
+
+        MODEL_PATH=""
+
+        # Search for model directory in mlruns (any level)
+        for dir in mlruns/*/artifacts/model mlruns/*/*/artifacts/model; do
+          if [ -d "$dir" ] && [ -f "$dir/MLmodel" ]; then
+            MODEL_PATH="$dir"
+            echo "✓ Found model at: $MODEL_PATH"
+            break
+          fi
+        done
+
+        if [ -z "$MODEL_PATH" ]; then
+          echo "❌ No model found in mlruns"
+          echo "Searching all directories:"
+          find mlruns -name "MLmodel" -type f 2>/dev/null || echo "No MLmodel files found"
           exit 1
         fi
-        echo "✓ Experiment ID: $EXPERIMENT_ID"
-
-        # List experiment contents
-        echo "Experiment contents:"
-        ls -la "mlruns/$EXPERIMENT_ID/"
-
-        # Find run ID (any directory that's not meta.yaml or .trash)
-        RUN_ID=$(find "mlruns/$EXPERIMENT_ID" -maxdepth 1 -type d ! -name "$EXPERIMENT_ID" ! -name ".*" | head -1 | xargs basename)
-        if [ -z "$RUN_ID" ] || [ "$RUN_ID" = "$EXPERIMENT_ID" ]; then
-          echo "❌ No run found in experiment $EXPERIMENT_ID"
-          echo "Available items:"
-          ls -la "mlruns/$EXPERIMENT_ID/"
-          exit 1
-        fi
-        echo "✓ Run ID: $RUN_ID"
-
-        MODEL_PATH="mlruns/${EXPERIMENT_ID}/${RUN_ID}/artifacts/model"
-
-        # Verify model directory exists
-        if [ ! -d "$MODEL_PATH" ]; then
-          echo "❌ Model not found at: $MODEL_PATH"
-          echo "Run artifacts contents:"
-          ls -la "mlruns/$EXPERIMENT_ID/$RUN_ID/artifacts/" || echo "Artifacts directory not found"
-          exit 1
-        fi
-        echo "✓ Model found at: $MODEL_PATH"
 
         # List model contents
         echo "Model contents:"
         ls -la "$MODEL_PATH/"
 
-        # Verify MLmodel file exists
+        # Verify required files
         if [ ! -f "$MODEL_PATH/MLmodel" ]; then
-          echo "❌ MLmodel file not found - required for Docker build"
+          echo "❌ MLmodel file missing"
           exit 1
         fi
-        echo "✓ MLmodel file found"
+        echo "✓ MLmodel file verified"
+
+        if [ ! -f "$MODEL_PATH/conda.yaml" ]; then
+          echo "⚠️  Warning: conda.yaml missing (may cause build issues)"
+        else
+          echo "✓ conda.yaml verified"
+        fi
 
         # Build Docker image
         echo "🐳 Building Docker image..."
