Fix: Add setuptools to build-docker job
Same pkg_resources error in build-docker job because setuptools
was missing from MLflow installation.

Solution: Install setuptools==69.0.0 before MLflow in build-docker job,
same as train-model job fix.

Now both jobs have consistent dependency installation.

--- a/.github/workflows/mlflow-ci.yml
+++ b/.github/workflows/mlflow-ci.yml
@@ -151,6 +151,8 @@ jobs:
 
     - name: 📦 Install MLflow
       run: |
+        python -m pip install --upgrade pip wheel
+        pip install setuptools==69.0.0
         pip install mlflow==${{ env.MLFLOW_VERSION }}
 
     - name: 🐳 Set up Docker Buildx
